# ChangeLog for net-im/gossip
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.62 2007/03/12 14:25:31 gustavoz Exp $

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> gossip-0.23.ebuild:
  Keyworded ~sparc wrt #170307

  10 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.23.ebuild:
  Add galago USE flag, bug #169971

  08 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.23.ebuild:
  Ooops, shouldnt have been stable (and force telepathy off for now, its far
  from being stable)

*gossip-0.23 (07 Mar 2007)

  07 Mar 2007; Olivier Crête <tester@gentoo.org> +gossip-0.23.ebuild:
  Version bump

  07 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild:
  Stable on amd64

  24 Feb 2007; nixnut <nixnut@gentoo.org> gossip-0.22.ebuild:
  Stable on ppc wrt bug 167825

  22 Feb 2007; Christian Faulhammer <opfer@gentoo.org> gossip-0.22.ebuild:
  stable x86; bug 167825

  22 Feb 2007; Jason Wever <weeve@gentoo.org> gossip-0.22.ebuild:
  Stable on SPARC wrt bug #167825.

  21 Feb 2007; Markus Rothe <corsair@gentoo.org> gossip-0.22.ebuild:
  Stable on ppc64; bug #167825

*gossip-0.22 (13 Jan 2007)

  13 Jan 2007; Olivier Crête <tester@gentoo.org> -gossip-0.19.ebuild,
  -gossip-0.20.ebuild, +gossip-0.22.ebuild:
  New version, cleanup old

*gossip-0.20 (19 Dec 2006)

  19 Dec 2006; Marinus Schraal <foser@gentoo.org> gossip-0.19.ebuild :
  New release

  23 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.18.ebuild,
  gossip-0.19.ebuild:
  Move depend to dbus-glib, and removed old version

*gossip-0.19 (11 Nov 2006)

  11 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.14.ebuild,
  -gossip-0.15.ebuild, -gossip-0.16.ebuild, +gossip-0.19.ebuild:
  Version bump, cleanup old versions

*gossip-0.18 (28 Oct 2006)

  28 Oct 2006; Olivier Crête <tester@gentoo.org> +gossip-0.18.ebuild:
  Version bump, bug #149422

*gossip-0.16 (17 Sep 2006)
