@@ -4,22 +4,22 @@ Hash: SHA1
 DIST gossip-0.22.tar.bz2 1295504 RMD160 36d050230a910ad41b8b949b1676266513442e3e SHA1 06f573f7a3347a17c42d96e21fa268b9a4949055 SHA256 ba118a93dfe4de03915dafb5c573846244674e78179b8f7fb05167cb5e119473
 DIST gossip-0.23.tar.bz2 1292386 RMD160 36ad5e45d0a5e692ce1cba43e5ea270589a4fbed SHA1 3f500b96e0474c1ee0d8dcd441ed0914ff543255 SHA256 f822d9cdadf03421b2b0240293930ced0f9ba1371eaf3161315dbd7972fa0dc3
 DIST gossip-0.9.tar.bz2 994982 RMD160 1a6ff83c6e4ca1f400475537e667cdf3f6d42538 SHA1 6b0c1b1fa1b861fccc12e13e3b4bdb10cbb04c8a SHA256 8397ef467bac32b4b2c5f1cc122e356f5262731b0206f6fe52540afb20ac4aea
-EBUILD gossip-0.22.ebuild 1185 RMD160 3806f9a7a27be8ebdb8a5c77c5a75b9e8f728ffd SHA1 fdbf3d0ea491f038a9d1893491e6a99e69bc39f4 SHA256 bee264c4583f007a50203dcb6363648e163deea328a0343966362bb6e24cd7fd
-MD5 ddc851303fe9c60109b47632c53c500f gossip-0.22.ebuild 1185
-RMD160 3806f9a7a27be8ebdb8a5c77c5a75b9e8f728ffd gossip-0.22.ebuild 1185
-SHA256 bee264c4583f007a50203dcb6363648e163deea328a0343966362bb6e24cd7fd gossip-0.22.ebuild 1185
-EBUILD gossip-0.23.ebuild 1229 RMD160 ccc1599bf3fc43baf746b93de82fe6161540f398 SHA1 62706fca6dc102c8fed4b69b9e2df509b0533a0c SHA256 b123f34c7ed1e7349187efdd380c82e072abdbb3451c020a61e61242b3b25229
-MD5 515c2c925b499eef3bd802b887ff6bbc gossip-0.23.ebuild 1229
-RMD160 ccc1599bf3fc43baf746b93de82fe6161540f398 gossip-0.23.ebuild 1229
-SHA256 b123f34c7ed1e7349187efdd380c82e072abdbb3451c020a61e61242b3b25229 gossip-0.23.ebuild 1229
+EBUILD gossip-0.22.ebuild 1212 RMD160 8f8fc05b11591287272ce939e0c0b98e84a0d250 SHA1 816705b995dcb5852554b468bd6e249a047d394f SHA256 5c5cb63226f9ec5f5e6a7e930e1ab7f27780ea3db12205dc4158be8fe39ba36b
+MD5 6a1d4faa2420134d54fbfcccbc2e364b gossip-0.22.ebuild 1212
+RMD160 8f8fc05b11591287272ce939e0c0b98e84a0d250 gossip-0.22.ebuild 1212
+SHA256 5c5cb63226f9ec5f5e6a7e930e1ab7f27780ea3db12205dc4158be8fe39ba36b gossip-0.22.ebuild 1212
+EBUILD gossip-0.23.ebuild 1254 RMD160 86188e1c6199a8f2dc1c099e29335474b300ee76 SHA1 d99e82acfc081280f8346cc4af0b4b43bd3c0db0 SHA256 5f35464f838d48869d388707a522acec6da5b57df96110e1381bbcf4e70cfc3c
+MD5 4c8dcc8570429c3853234e9b28c20e35 gossip-0.23.ebuild 1254
+RMD160 86188e1c6199a8f2dc1c099e29335474b300ee76 gossip-0.23.ebuild 1254
+SHA256 5f35464f838d48869d388707a522acec6da5b57df96110e1381bbcf4e70cfc3c gossip-0.23.ebuild 1254
 EBUILD gossip-0.9.ebuild 935 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 SHA1 5f1667ba6bb29c728cbcf01172f54a2fa1307a72 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb
 MD5 b8871adaeceb5c2ddf1c1e82efac58ef gossip-0.9.ebuild 935
 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 gossip-0.9.ebuild 935
 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb gossip-0.9.ebuild 935
-MISC ChangeLog 8901 RMD160 26510544f879e8172e5a5a3c960263af862f9966 SHA1 ac83ee2f5221ca3c8ff32ba14ea7694afac784a9 SHA256 8fed8e1abcfe015aaebec184de1386c55d9fbddd7b6d42e4d19e992b4c029f0d
-MD5 377685d212434c36023dd1e2c5d23770 ChangeLog 8901
-RMD160 26510544f879e8172e5a5a3c960263af862f9966 ChangeLog 8901
-SHA256 8fed8e1abcfe015aaebec184de1386c55d9fbddd7b6d42e4d19e992b4c029f0d ChangeLog 8901
+MISC ChangeLog 9044 RMD160 a930ca00f63339d20ab51cf27bfe7fbf29f1e46e SHA1 60a083510356d325c86763725b85807a428eaba4 SHA256 73fad93def3a109eb8c9a9f797fa58ee5d9eddd8d6a37fba85b6ad66a76ece5f
+MD5 fae1e4b2c0d44e86872183e31164c7f0 ChangeLog 9044
+RMD160 a930ca00f63339d20ab51cf27bfe7fbf29f1e46e ChangeLog 9044
+SHA256 73fad93def3a109eb8c9a9f797fa58ee5d9eddd8d6a37fba85b6ad66a76ece5f ChangeLog 9044
 MISC metadata.xml 291 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 SHA1 665642f3883be6b373c5852d37b2e361b8f6b3b6 SHA256 de23ac48a0a04ffb18b093b4698426ade841e315f2c88b15b32a6d6c7df3cf2c
 MD5 d401fd79e8f53e8a459710d3d037e1df metadata.xml 291
 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 metadata.xml 291
@@ -34,9 +34,9 @@ MD5 4e21efec32c4c65dbfb928498522f410 files/digest-gossip-0.9 235
 RMD160 449bd29ef827f52d65e565039010c8d713fd33bb files/digest-gossip-0.9 235
 SHA256 fae5f3f14dbf24641ad10f899f6285af7748b0c4356876d11777b56739170a87 files/digest-gossip-0.9 235
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6-ecc01.6 (GNU/Linux)
+Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFF9WLhKRy60XGEcJIRAtrIAJ4ui1E0tBT1hVutTfcR23gbupkFzQCghjb9
-lGJ9G5Ct0aunYvHZJLnMRus=
-=Dx0d
+iD8DBQFF9cqm+IXOQtHLm/gRAq0AAKCLhsDDoaK7UDmAfbEsUhwZ4+ANZACfWvA9
+hg+RuTd0NuydyKdu3/s1P5U=
+=tsLt
 -----END PGP SIGNATURE-----
