@@ -1,6 +1,10 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.62 2007/03/12 14:25:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.63 2007/03/12 21:47:54 tester Exp $
+
+  12 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild,
+  gossip-0.23.ebuild:
+  Add dependency on libgnomeui-2, fixes bug #170637
 
   12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> gossip-0.23.ebuild:
   Keyworded ~sparc wrt #170307
